--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content fade-in-up">
-                <h1>Professional MCP Infrastructure</h1>
+                <h1>Decentralized and Enterprise-ready MCP Infrastructure</h1>
                 <p class="hero-subtitle">
                     Cardea enables sophisticated MCP services with authentication, authorization, payments, and trust validation. 
                     Transform compute-intensive MCP servers into professionally hosted, monetizable services.
@@ -1058,7 +1058,7 @@
                         <span>Cardea</span>
                     </div>
                     <p style="color: var(--text-secondary); margin-bottom: 1rem;">
-                        Professional MCP infrastructure enabling secure, authenticated, and monetizable AI services.
+                        Decentralized and enterprise-ready MCP infrastructure enabling secure, authenticated, and monetizable AI services.
                     </p>
                 </div>
 
@@ -1067,29 +1067,32 @@
                     <a href="#enterprise-mcps">Enterprise MCPs</a>
                     <a href="#software">Cardea Software</a>
                     <a href="#network">Cardea Network</a>
-                    <a href="#token">Token Economics</a>
+                    <!-- <a href="#token">Token Economics</a> -->
                     <a href="#features">Production Ready</a>
                 </div>
 
                 <div class="footer-section">
                     <h4>Resources</h4>
-                    <a href="https://github.com/decentralized-mcp">Documentation</a>
-                    <a href="https://github.com/decentralized-mcp">GitHub</a>
-                    <a href="#network">Network Status</a>
-                    <a href="#">API Reference</a>
+                    <!-- <a href="https://github.com/cardea-mcp">Documentation</a> -->
+                    <a href="https://github.com/cardea-mcp">Cardea projects</a>
+                    <a href="https://github.com/wasmedge/wasmedge">Linux Foundation WasmEdge Runtime</a>
+                    <a href="https://github.com/llamaedge/llamaedge">LlamaEdge API servers</a>
+                    <a href="https://github.com/gaianet-ai">Gaia AI network</a>
+                    <!-- <a href="#network">Network Status</a>
+                    <a href="#">API Reference</a> -->
                 </div>
 
                 <div class="footer-section">
                     <h4>Community</h4>
-                    <a href="https://x.com/realwasmedge">Twitter</a>
-                    <a href="https://github.com/llamaedge">Discord</a>
+                    <a href="https://x.com/mcp_servers">x</a>
+                    <!-- <a href="https://github.com/llamaedge">Discord</a> -->
                     <a href="https://www.linkedin.com/company/second-state/">LinkedIn</a>
-                    <a href="#">Blog</a>
+                    <!-- <a href="#">Blog</a> -->
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 Cardea. All rights reserved. Building the future of professional MCP infrastructure.</p>
+                <p>&copy; 2025 Cardea. All rights reserved. Building the future of decentralized and enterprise-ready MCP infrastructure.</p>
             </div>
         </div>
     </footer>
